# cognitive_workflow

./: .gitignore  README.md  README_WINDOWS.md  download_models.bat  download_models.ps1  download_models.sh  env.template  local_whisper_transcribe.py  main.py  pyproject.toml  requirements.txt  run_api.py  setup.bat  setup.ps1  setup.sh  test.ipynb
api/: job_queue.py  server.py
audio_input/: .gitkeep
config/: prompts.py  settings.py
modules/: judge.py  summarizer.py  transcriber.py
utils/: audio_processor.py  download_models.py  evaluator.py  file_handler.py  logger.py  model_manager.py
